force-app/main/default/objects/sugati__Questionnaire_Answer_Options__c/sugati__Questionnaire_Answer_Options__c.object-meta.xml
<CustomObject>
    <description>A list of all the possible Answer Options</description>
    <label>Questionnaire Answer Option</label>
    <nameField>
        <label>Questionnaire Answer Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Answer Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>