force-app/main/default/objects/sugati__Questionnaire_Answer_Options__c/fields/sugati__QAO_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__QAO_Order__c</fullName>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>