force-app/main/default/objects/sugati__Questionnaire_Answer_Options__c/fields/sugati__QAO_Questionnaire_Question__c.field-meta.xml
<CustomField>
    <fullName>sugati__QAO_Questionnaire_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Question</label>
    <referenceTo>sugati__Questionnaire_Question__c</referenceTo>
    <relationshipLabel>Questionnaire Answer Options</relationshipLabel>
    <relationshipName>Questionnaire_Answer_Options</relationshipName>
    <type>Lookup</type>
</CustomField>