force-app/main/default/objects/sugati__Questionnaire_Answer_Options__c/fields/sugati__QAO_Score__c.field-meta.xml
<CustomField>
    <fullName>sugati__QAO_Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>